# sqlserver-doctor-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/sqlserver_doctor/: __init__.py  main.py  server.py
src/sqlserver_doctor/utils/: __init__.py  connection.py  logger.py
tests/: __init__.py  test_connection.py  test_tools.py
